fixed spacing issues

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,7 +4,7 @@ body {
   text-align: center;
   font-size: 16px;
   padding-top: 10px;
-  padding-bottom: 100px;
+  padding-bottom: 70px;
 }
 
 #test-img {
@@ -17,7 +17,6 @@ body {
 .screenshot {
   width: 100%;
   margin-bottom: 20px;
-
 }
 
 h1 {
@@ -50,6 +49,10 @@ h2 small{
 .panel .panel-heading:hover {
   background-color: #f3f3f3;
   cursor: pointer;
+}
+
+.panel-heading {
+  padding: 8px 10px;
 }
 
 .panel-body {
@@ -103,9 +106,7 @@ li {
 }
 
 i {
-  margin-top: 5px;
-  margin-right: 15px;
-
+  margin-right: 0px;
 }
 
 
